Fixed advanced options align

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -7720,6 +7720,7 @@ dl.form.fieldInstanceEditor {
 						margin: 0;
 						text-transform: none;
 						font-weight: bold;
+						text-align: left;
 						color: white;
 						cursor: pointer;
 					}
